--- a/src/back.html
+++ b/src/back.html
@@ -75,6 +75,10 @@
                 <div id="primary" data-display-name="Primary Definition">{{MainDefinition}}</div>
                 {{/MainDefinition}}
                 <div id="glossaries" data-display-name="Glossaries">{{Glossary}}</div>
+                <div id="wanianki" data-display-name="WaniAnki">
+                    <span id="word" style="display: none;">{{Expression}}</span>
+                    <div id="kanjiInfo"></div>
+                </div>
             </div>
         </blockquote>
 
@@ -118,6 +122,13 @@
 </footer>
 
 <!----------- Scripts ------------>
+<script>
+    var apiToken = "YOU CAN LEAVE THIS AS IT IS OR ADD YOUR WANIKANI API KEY";
+    var kanji = document.getElementById("word").textContent;
+</script>
+<script type="text/javascript" src="https://damiansh.github.io/js/jquery.min.js"></script>
+<script src="https://damiansh.github.io/waniAnki/waniAnki.js"></script>
+<link rel="stylesheet" href="https://damiansh.github.io/waniAnki/waniAnki.css">
 <script>
     // This code is concerned with calculating the Pitch Accent and constructing the pitch accent graphs
     function isOdaka(pitchNumber) {
@@ -391,10 +402,7 @@
 
     // Display definition corresponding to index
     function updateDefDisplay() {
-        const definitions = document.querySelectorAll(
-            ".main-def > .definition > div"
-        );
-
+        const definitions = document.querySelectorAll(".main-def > .definition > div");
         let n_defs = definitions.length;
         if (n_defs === 1) definitions[0].classList.remove("hidden");
         if (n_defs <= 1) return;
@@ -403,15 +411,15 @@
         currentIndex = currentIndex % n_defs;
         while (currentIndex < 0) currentIndex += n_defs;
 
-        for (let idx = 0; idx < n_defs; idx++) {
-            definitions[idx].classList.add("hidden");
-        }
+        definitions.forEach(def => def.classList.add("hidden"));
         definitions[currentIndex].classList.remove("hidden");
 
-        const defDisplayName = definitions[currentIndex].getAttribute("data-display-name")
+        const defDisplayName = definitions[currentIndex].getAttribute("data-display-name");
         const indexDisplay = document.querySelector(".def-info");
-        indexDisplay.style.opacity = 1;
-        indexDisplay.innerText = `${defDisplayName} ${currentIndex + 1}/${n_defs}`;
+        if (indexDisplay) {
+            indexDisplay.style.opacity = 1;
+            indexDisplay.innerText = `${defDisplayName} ${currentIndex + 1}/${n_defs}`;
+        }
     }
 
     function setUpDefToggle() {
@@ -427,33 +435,31 @@
         let mainDefContainer = document.querySelector(".main-def");
         const leftEdge = document.createElement("div");
         const rightEdge = document.createElement("div");
-        leftEdge.classList.add("left-edge");
-        leftEdge.classList.add("tappable");
-        rightEdge.classList.add("right-edge");
-        rightEdge.classList.add("tappable");
+        leftEdge.classList.add("left-edge", "tappable");
+        rightEdge.classList.add("right-edge", "tappable");
         mainDefContainer.appendChild(leftEdge);
         mainDefContainer.appendChild(rightEdge);
 
         const changeIndex = (value) => {
-            // sync index between clicks and arrowkeys
-            index = Number(document.head.getAttribute("data-def-index"));
+            let index = Number(document.head.getAttribute("data-def-index")) || 0;
             index += value;
             document.head.setAttribute("data-def-index", index);
             updateDefDisplay();
         };
 
-        leftEdge.addEventListener("click", (e) => changeIndex(-1));
-        rightEdge.addEventListener("click", (e) => changeIndex(1));
+        leftEdge.addEventListener("click", () => changeIndex(-1));
+        rightEdge.addEventListener("click", () => changeIndex(1));
 
-        // Add key listener only once per session
-        if (document.head.classList.contains("has-listener")) return;
-        document.addEventListener("keydown", (e) => {
-            if (e.key === "ArrowLeft") changeIndex(-1);
-            else if (e.key === "ArrowRight") changeIndex(1);
-        });
-
-        document.head.classList.add("has-listener");
+        // Add arrow key support (only once per session)
+        if (!document.head.classList.contains("has-listener")) {
+            document.addEventListener("keydown", (e) => {
+                if (e.key === "ArrowLeft") changeIndex(-1);
+                else if (e.key === "ArrowRight") changeIndex(1);
+            });
+            document.head.classList.add("has-listener");
+        }
     }
+
 
     // This just handles clicking and showing images
     function clickImages() {
